# observatoire_produits

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: push-docker-image-to-docker-hub.yml
notebooks/: Elefan_OBF.ipynb  Elefan_OFF.ipynb  Elefan_OPF.ipynb  Elefan_OPFF.ipynb  README.md
src/data/: elefan_connector.py  epicerie_connector.py  make_dataset.py  off_connector.py
